@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1045 2024/04/17 14:33:55 wiz Exp $
+# $NetBSD: Makefile,v 1.1046 2024/04/26 15:05:24 wiz Exp $
 #
 
 COMMENT=	Graphics tools and libraries
@@ -307,7 +307,6 @@ SUBDIR+=	kolourpaint
 SUBDIR+=	koverartist
 SUBDIR+=	kplotting
 SUBDIR+=	kqtquickcharts
-SUBDIR+=	kqtquickcharts4
 SUBDIR+=	krita
 SUBDIR+=	kruler
 SUBDIR+=	ksanecore
