@@ -1,1 +1,0 @@
-Beautiful and interactive charts for Qt Quick 1.0
