@@ -1,14 +1,0 @@
-# $NetBSD: Makefile,v 1.35 2023/12/29 18:24:48 adam Exp $
-
-DISTNAME=	kqtquickcharts-${_KDE_VERSION}
-PKGREVISION=	34
-CATEGORIES=	graphics
-COMMENT=	Beautiful and interactive charts for Qt Quick 1.0
-
-.include "../../meta-pkgs/kde4/Makefile.kde4"
-
-.include "../../meta-pkgs/kde4/kde4.mk"
-
-.include "../../x11/kdelibs4/buildlink3.mk"
-
-.include "../../mk/bsd.pkg.mk"
