@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.3 2021/10/26 10:46:23 nia Exp $
-
-BLAKE2s (kqtquickcharts-4.14.3.tar.xz) = cae564d3773aee3e7faf3e930a919b620cad396e9e9d599b12f0e1d14ab35ec5
-SHA512 (kqtquickcharts-4.14.3.tar.xz) = 5d0d66b1e69ece2ef9edf74d3db369c3cc01a221419d0f4a475550a4224cb481580dd185609b72b6b37b003292718922e40965edb7d67d2cc6f297e859424289
-Size (kqtquickcharts-4.14.3.tar.xz) = 20472 bytes
