@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2024,v 1.2715 2024/04/26 15:03:41 wiz Exp $
+$NetBSD: CHANGES-2024,v 1.2716 2024/04/26 15:05:24 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2024:
 
@@ -4468,3 +4468,4 @@ Changes to the packages collection and infrastructure in 2024:
 	Removed x11/qwt-qt4 [wiz 2024-04-26]
 	Removed audio/liblastfm [wiz 2024-04-26]
 	Removed devel/qtscriptgenerator [wiz 2024-04-26]
+	Removed graphics/kqtquickcharts4 successor graphics/kqtquickcharts [wiz 2024-04-26]
